tests/expectations/compiler/finalize/private_input_ouput_fail.out
Error [EPAR0370047]: expected {
    --> compiler-test:3:15
     |
   3 |         final finalize_foo(a);
     |               ^^^^^^^^^^^^
Error [EPAR0370047]: expected {
    --> compiler-test:8:15
     |
   8 |         final finalize_bar(a);
     |               ^^^^^^^^^^^^
